--- a/Xadrez/Chess.csproj
+++ b/Xadrez/Chess.csproj
@@ -45,13 +45,17 @@
   <ItemGroup>
     <Compile Include="chessGame\ChessMatch.cs" />
     <Compile Include="chessGame\ChessPosition.cs" />
+    <Compile Include="chessGame\Pieces\Bishop.cs" />
+    <Compile Include="chessGame\Pieces\Knight.cs" />
+    <Compile Include="chessGame\Pieces\Pawn.cs" />
+    <Compile Include="chessGame\Pieces\Queen.cs" />
     <Compile Include="gameBoard\ChessBoardException.cs" />
     <Compile Include="gameBoard\Board.cs" />
     <Compile Include="gameBoard\Color.cs" />
     <Compile Include="gameBoard\Piece.cs" />
     <Compile Include="gameBoard\Position.cs" />
-    <Compile Include="chessGame\King.cs" />
-    <Compile Include="chessGame\Rook.cs" />
+    <Compile Include="chessGame\Pieces\King.cs" />
+    <Compile Include="chessGame\Pieces\Rook.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen.cs" />
